<resources>
    <string name="app_name">Android Project</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_user_name">Guest</string>
    <string name="nav_header_user_email">Guest@project.android.dev</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_create_listing">Create Listing</string>
    <string name="menu_inbox">Inbox</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_login">Login</string>
    <string name="menu_logout">Logout</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="title_login">Login</string>
    <string name="title_register">Register</string>


    <string name="prompt_display_name">Display Name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_login">Log in</string>
    <string name="action_register">Sign up</string>
    <string name="action_redirect_to_login">Already have an account? Log in</string>
    <string name="action_redirect_to_register">Not yet registered? Sign up</string>
    <string name="login_successful">"Logged in successfully as "</string>
    <string name="register_successful">"Registered successfully as "</string>
    <string name="invalid_display_name">Display name must be at least 3 characters long</string>
    <string name="invalid_email">Not a valid email address</string>
    <string name="invalid_password">Password must be at least 6 characters long</string>
    <string name="login_failed">"Login failed"</string>

    <string name="action_create_listing">Create Listing</string>
    <string name="hint_product_title">Title</string>
    <string name="hint_product_description">Product Description</string>
    <string name="hint_product_price">Product Price</string>

    <string name="product_asking_price">Asking Price:</string>
    <string name="not_logged_in_offer">You must be logged in to make an offer</string>
    <string name="hint_store">Seller</string>
    <string name="action_send_offer">Send Offer</string>
    <string name="hint_product_price_offer">Offer Price</string>

    <string name="hint_buyer">Buyer</string>
    <string name="offering_price_label">Offering Price:</string>
    <string name="offering_price">Price</string>
    <string name="notification_title">Title</string>
    <string name="notification_content">Notification Content</string>
    <string name="not_logged_in_inbox">You must be logged in to view the inbox</string>


    <string name="not_logged_in_create_listing">You must be logged in to create a listing</string>
    <string name="invalid_image">Invalid Image</string>
    <string name="invalid_title">Title cannot be empty or too long</string>
    <string name="invalid_description">Description cannot be empty or too long</string>
    <string name="invalid_price">Invalid Price</string>
    <string name="action_show_profile_listings">Show All User Listed Products</string>


</resources>