<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navHome"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home"/>
        <item
            android:id="@+id/navCreateListing"
            android:icon="@drawable/ic_menu_create_listing"
            android:title="@string/menu_create_listing"/>
        <item
            android:id="@+id/navProfile"
            android:icon="@drawable/ic_menu_profile"
            android:title="@string/menu_profile"/>
        <item
            android:id="@+id/navSettings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/menu_settings"/>
    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/navLogin"
                android:icon="@drawable/ic_menu_login"
                android:title="@string/menu_login"/>

            <item
                android:id="@+id/navLogout"
                android:icon="@drawable/ic_menu_logout"
                android:title="@string/menu_logout"/>
        </menu>
    </item>

</menu>