<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.product.ProductFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/cardAction"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/ivProductPreview"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:cropToPadding="true"
                app:layout_constraintDimensionRatio="h,1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>


            <TextView
                android:id="@+id/tvProductTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                android:layout_marginVertical="@dimen/activity_vertical_margin"
                android:text="@string/hint_product_title"
                android:textSize="@dimen/text_size_title"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivProductPreview"/>

            <TextView
                android:id="@+id/tvProductDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                android:layout_marginVertical="@dimen/activity_vertical_margin"
                android:minLines="2"
                android:text="@string/hint_product_description"
                android:textSize="@dimen/text_size_body"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvProductTitle"/>

            <TextView
                android:id="@+id/tvProductSeller"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                android:text="@string/hint_store"
                android:textSize="@dimen/text_size_body"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/ivProfilePicture"
                app:layout_constraintTop_toTopOf="@+id/ivProfilePicture"/>

            <TextView
                android:id="@+id/tvProductPriceLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                android:layout_marginVertical="@dimen/activity_vertical_margin"
                android:text="@string/product_asking_price"
                app:layout_constraintEnd_toStartOf="@id/tvProductPrice"
                app:layout_constraintStart_toEndOf="@+id/ivProfilePicture"
                app:layout_constraintTop_toBottomOf="@+id/tvProductSeller"/>

            <TextView
                android:id="@+id/tvProductPrice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                android:layout_marginVertical="@dimen/activity_vertical_margin"
                android:text="@string/hint_product_price"
                android:textAlignment="textEnd"
                android:textSize="@dimen/text_size_secondary"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/tvProductPriceLabel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tvProductPriceLabel"
                app:layout_constraintTop_toTopOf="@+id/tvProductPriceLabel"/>

            <dev.android.project.ui.custom.ProfilePictureImageView
                android:id="@+id/ivProfilePicture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                android:layout_marginVertical="@dimen/activity_vertical_margin"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvProductDescription"/>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


    <androidx.cardview.widget.CardView
        android:id="@+id/cardAction"
        style="@style/ThemeOverlay.AppCompat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="@dimen/card_view_overlay_elevation"
        app:cardBackgroundColor="?attr/colorBackgroundFloating"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/activity_vertical_margin">

            <EditText
                android:id="@+id/etPriceOffer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                android:hint="@string/hint_product_price_offer"
                android:inputType="numberDecimal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btnSendOffer"
                app:layout_constraintStart_toStartOf="parent"/>

            <Button
                android:id="@+id/btnSendOffer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/card_content_margin"
                android:layout_marginVertical="@dimen/activity_vertical_margin"
                android:text="@string/action_send_offer"
                app:layout_constraintBottom_toBottomOf="@id/etPriceOffer"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/etPriceOffer"
                app:layout_constraintTop_toTopOf="@id/etPriceOffer"/>


            <TextView
                android:id="@+id/tvNotLoggedIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/not_logged_in_offer"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginVertical="64dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3"/>

</androidx.constraintlayout.widget.ConstraintLayout>
